# neural-evo-tauri-app

./: ATTENTION_MECHANISM_IMPLEMENTATION_GUIDE.md  BACKEND_ARCHITECTURE_ANALYSIS.md  BACKEND_RUST_IMPLEMENTATION_GUIDE.md  CONV1D_TIMESERIES_IMPLEMENTATION.md  CSV_DATASET_FLEXIBLE_SYSTEM.md  CSV_IMPLEMENTATION_COMPLETE.md  DATASET_REFACTORING_PLAN.md  EVOLUTION.MD  LSTM_GRU_IMPLEMENTATION_GUIDE.md  NETWORK-CANVAS.md  NODE_ARCHITECTURE_REFERENCE.md  PARAMETER_CONFIG_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PHASE1_FINAL_CHECKLIST.md  PHASE1_QUICK_REFERENCE.md  PHASE1_SUMMARY.md  README.md  TASK_120_COMPLETION_REPORT.md  TECHNICAL_NODE_ARCHITECTURE.md  TIMESERIES_NODE_IMPLEMENTATION_PLAN.md  ZERO_COST_INTEGRATION.md  ZERO_COST_PROXIES.md  eslint.config.js  package-lock.json  package.json  plan.md  test_arch.ts  tsc_output.txt  tsc_output_utf8.txt  tsconfig.json
.github/: copilot-instructions.md
.qwen/: settings.json
plan/: 001_backend_dto_contracts.md  002_orchestrator_module_scaffold.md  003_frontend_store_extensions.md  00_INDEX.md  (+29 more)
src-tauri/: CSV_PHASE1_INTEGRATION_NOTES.md  Cargo.toml  build_output.txt  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backend.rs  csv_loader.rs  data_loader.rs  device_library.rs  device_profiles.rs  dtos.rs  entities.rs  genealogy.rs  lib.rs  main.rs  pareto.rs  profiler.rs  shape_inference.rs  stopping_criteria.rs  weight_io.rs  zero_cost_proxies.rs
src-tauri/src/orchestrator/: memory_estimator.rs  mod.rs  run_registry.rs  scheduler.rs
src-tauri/tests/: integration_evolution_pipeline.rs
(+334 files in other folders)
