[package]
name = "neural-evo-tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neural_evo_tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17.2"
burn = { version = "0.20", features = ["ndarray", "cuda", "train", "autodiff", "wgpu"] }
burn-dataset = { version = "0.20.1", features = ["vision"] }
image = "0.25.9"
reqwest = "0.13.2"
futures = "0.3.32"
tokio-stream = "0.1.18"
rand = "0.10.0"
glob = "0.3.3"
uuid = { version = "1.21.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
